@@ -1,0 +1,3 @@
+Site URL: https://x-x-x.tube/
+Contact: mailto:sexgeniral@gmail.com, https://xxxtube.chatbro.com/
+DMCA: https://x-x-x.tube/dmca/
