@@ -2,6 +2,7 @@
 - americass - removed (site defunct) - cherry-picked from upstream
 - Fix video playback for FlareSolverr scraped sites (e.g. luxuretv) - cherry-picked from upstream
 - Add upstream sync tracking system with automated scripts
+- xxxtube - new site - cherry-picked from upstream
 
 [B]Version 1.1.204[/B]
 - Testing Infrastructure: Expanded test suite from 449 to 622 tests (38% increase)
